# crawler-siac-mata60

./: .flake8  .gitignore  pyproject.toml
crawlersiac/: main.py
crawlersiac/Model/: Curso.py  Disciplina.py  __init__.py
crawlersiac/Scrapper/: CriarScriptCarga.py  Scrapper.py  __init__.py
crawlersiac/config/: config.py  settings.toml
